# features-copilot

./: .gitignore  CMakeLists.txt  CONFIG_SYSTEM.md  CONTINUOUS_TRAINING.md  CONTINUOUS_TRAINING_SUMMARY.md  DAY_AHEAD_SUMMARY.md  DEFERRABLE_LOAD_CONTROL.md  HA_INTEGRATION_SUMMARY.md  HA_MQTT_INTEGRATION.md  HA_REST_API_GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CONFIG.md  ML_OPTIMIZATION.md  MQTT_MOSQUITTO_GUIDE.md  MQTT_REMOVAL_PROGRESS.md  PRODUCTION_DEPLOYMENT.md  README  SENSOR_STATE_PUBLISHING.md
_codeql_build_dir/: test_config  test_continuous_training  test_deferrable_loads
examples/: Makefile  README.md  ha_rest_curl_example.cpp  ha_rest_example
features-copilot-copilot-develop-home-automation-system/: ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION.md  README
features-copilot-copilot-develop-home-automation-system/include/: AirConditioner.h  Appliance.h  EnergyOptimizer.h  Heater.h  Light.h  Sensor.h
include/: AirConditioner.h  Appliance.h  Config.h  ConfigWebServer.h  Curtain.h  DayAheadOptimizer.h  DeferrableLoadController.h  EVCharger.h  EVChargerSensor.h  EnergyMeter.h  EnergyOptimizer.h  Event.h  EventManager.h  HAIntegration.h  HARestClient.h  HTTPClient.h  Heater.h  HistoricalDataCollector.h  HistoricalDataGenerator.h  Light.h  MLPredictor.h  MLTrainingScheduler.h  MQTTClient.h  RestApiClient.h  Sensor.h  SolarSensor.h  SystemWebService.h  TemperatureSensor.h
src/: AirConditioner.cpp  Appliance.cpp  Config.cpp  ConfigWebServer.cpp  Curtain.cpp  DayAheadOptimizer.cpp  DeferrableLoadController.cpp  EVCharger.cpp  EVChargerSensor.cpp  EnergyMeter.cpp  EnergyOptimizer.cpp  Event.cpp  EventManager.cpp  HAIntegration.cpp  HARestClient.cpp  HTTPClient.cpp  Heater.cpp  HistoricalDataCollector.cpp  HistoricalDataGenerator.cpp  Light.cpp  MLPredictor.cpp  MLTrainingScheduler.cpp  MQTTClient.cpp  RestApiClient.cpp  Sensor.cpp  SolarSensor.cpp  SystemWebService.cpp  TemperatureSensor.cpp  main.cpp  main_production.cpp  test_config.cpp  test_continuous_training.cpp  test_deferrable_loads.cpp
